# lotus_budc_controler

./: CMakeLists.txt  Dockerfile  Dockerfile.deb  README.md  build_script.sh
.github/workflows/: build.yml
cmake/: mingw-w64-x86_64.cmake
src/: budc_scpi.c  budc_scpi.h  cli.c  gui.cpp
